tests/k8s_testcases/example_policies/testcase9-sanity/testcase9-sanity-between-rules.yaml

# for sanity checks

### 1. This policy just isolates pods with app other than helm and with tier
### Enables ingress from namespace default
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dup-ingress-rules-contained-egress-rule
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: Exists
      - key: tier
        operator: Exists
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            unique-label: vendor-systemNameSpace
    - from:
      - namespaceSelector:
          matchLabels:
            unique-label: vendor-systemNameSpace
  egress:
    - to:
      - podSelector:
          matchExpressions:
          - key: app
            operator: Exists
          - key: tier
            operator: Exists
    - to:         # since app in {helm, vpn} implies tier exits, this rule is actually contained in the former one
      - podSelector:
          matchExpressions:
          - key: app
            operator: Exists
          - key: app
            operator: In
            values:
              - helm
              - vpn

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-rule-egress-rule-contained-other-policy
  namespace: kube-system
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: NotIn
        values:
          - helm
      - key: app
        operator: Exists
      - key: tier
        operator: Exists
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:   # this rule should be contain in ingress rule 1 of previous policy
      - namespaceSelector:
          matchLabels:
            unique-label: vendor-systemNameSpace
    - from: # this rule is so that the policy is a whole will not be redundant
      - podSelector:
          matchExpressions:
          - key: app
            operator: Exists
  egress:
    - to: # this rule should be contained in egress rule 1 of previous rule
      - podSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - helm
          - key: tier
            operator: Exists
